tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/eu-west-3/ec2-describe-internet-gateways.json
{
    "InternetGateways": [
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-b92b3ed0"
                }
            ],
            "InternetGatewayId": "igw-8691d9ef",
            "OwnerId": "167389268608",
            "Tags": []
        }
    ]
}
