tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/eu-west-3/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-5da17736",
                    "NetworkAclId": "acl-6259470b",
                    "SubnetId": "subnet-836af6ce"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-5fa17734",
                    "NetworkAclId": "acl-6259470b",
                    "SubnetId": "subnet-acd8e8c5"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-6259470b",
            "OwnerId": "167389268608",
            "Tags": [],
            "VpcId": "vpc-b92b3ed0"
        }
    ]
}
