tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/eu-west-3/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "6.168.104.159/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-2725da4f",
                    "CidrBlock": "6.168.104.159/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-c2c6d4ab",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "167389268608",
            "State": "available",
            "VpcId": "vpc-b92b3ed0"
        }
    ]
}
